# storage/api-docs/api-docs.json
@@ -268,7 +268,8 @@
                                 "required": [
                                     "name",
                                     "email",
-                                    "password"
+                                    "password",
+                                    "password_confirmation"
                                 ],
                                 "properties": {
                                     "name": {
@@ -281,6 +282,11 @@
                                         "example": "johndoe@example.com"
                                     },
                                     "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "password123"
+                                    },
+                                    "password_confirmation": {
                                         "type": "string",
                                         "format": "password",
                                         "example": "password123"
@@ -1053,18 +1059,6 @@
                             "archived"
                         ],
                         "example": "published"
-                    },
-                    "created_at": {
-                        "description": "Date and time when the article was created",
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2025-01-10T10:00:00Z"
-                    },
-                    "updated_at": {
-                        "description": "Date and time when the article was last updated",
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2025-01-11T12:00:00Z"
                     }
                 },
                 "type": "object"
@@ -1106,18 +1100,6 @@
                             "type": "string",
                             "example": "author_1"
                         }
-                    },
-                    "created_at": {
-                        "description": "Timestamp when the preference was created",
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2025-01-10T10:00:00Z"
-                    },
-                    "updated_at": {
-                        "description": "Timestamp when the preference was last updated",
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2025-01-11T12:00:00Z"
                     }
                 },
                 "type": "object"
